# Autodiff

./: .gitignore  CMakeLists.txt
include/: constant.hpp  generator.hpp  single_variable.hpp  variable.hpp
tests/: single_variable.cc  variable.cc
